--- a/style/index.css
+++ b/style/index.css
@@ -67,7 +67,7 @@ section{
 /* Navbar styles */
 header{
     width:100%;
-    height: 60px;
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -225,11 +225,7 @@ button {
    
     border-radius:0 20px 0 20px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
-   
-    /* flex: 1; */
-    /* width: calc(100%/3); */
-    width: 393px;
-    /* height: 296px; */
+    max-width: 393px;
    margin: auto;
    transition: all ease-in 0.3s;
 }
@@ -321,23 +317,22 @@ color: #ffffff;
 
 
 .card.img{
-    /* width: 500px; */
+    max-width: 600px;
     margin: auto;
     border: none;
 }
 .img img{
-/* width: 50%; */
+width: 100%;
 height: 300px;
 border-radius: 9px;
 margin: auto;
 }
 .card.text{
     border: none;
-    /* width: 500px; */
-    padding: 30px;
-   
-    width: 90%;
+    max-width: 600px;
+    padding: 10px;
     margin: auto;
+    margin-top: 70px;
     background: #ffffff;
 }
 .img p{
@@ -398,8 +393,8 @@ margin: auto;
 
   .mySwiper0 .swiper-slide img, .mySwiper2 .swiper-slide img{
     display: block;
-    width: 70%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
     margin: auto;
     /* object-fit: cover; */
   }
