--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -251,9 +251,10 @@ margin: auto;
 .package-section h2::before{
     content: '';
 }
-.accordion-item {
+.accordion-item button{
     background-color: #fff;
     border:none !important; 
+    box-shadow: none !important;
 }
 /* faqs-section */
 .faqs-section{
@@ -267,10 +268,8 @@ margin: auto;
 }
 
 
-/* packages */
-.package-section{
-    background: #ffffff;
-};
+/* packages swiper */
+
 .package-section .swiper {
     width: 100%;
     height: 100%;
@@ -293,7 +292,7 @@ margin: auto;
   };
 
 /* Media query for responsive design */
-@media screen and (max-width: 768px) {
+@media(max-width: 768px) {
    
     .hero-content{
         margin: auto;
@@ -304,11 +303,7 @@ margin: auto;
     .hero {
         padding: 50px 0;
     }
-    .flex{
-        display: flex;
-       flex-direction: column;
-      
-    }
+  
     .info-section {
         flex-direction: column;
     }
@@ -325,5 +320,9 @@ margin: auto;
     .counter {
         flex-direction: row;
     }
+.flex{
+    display: flex;
+   flex-direction: column;
+}
 
 }
