--- a/pages/style/utils.css
+++ b/pages/style/utils.css
@@ -113,40 +113,12 @@ header .menu{
     display: none;
 }
 
-/* media queryy */
-@media(max-width:1000px){
-    .flex{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-    }
-    header ul{
-        position: fixed;
-        top:100px;
-        right: -100%;
-        background: rgba(0,0,0,0.5);
-        height: calc(100vh - 100px);
-        width:50%;
-        flex-direction: column;
-        align-items: center;
-        transition: right 0.5s linear;
-    }
-     
-    header .menu{
-        display: block;
-        width:100px;
-        text-align: center;
-    }
-    #chk1:checked ~ ul{
-        right: 0;
-        
-    }
-  
-}
+
 /* herosection */
 /* baner section */
 .hero {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     background: url(../../assets/img/background.jpg) no-repeat center center; /* Replace with your image URL */
     background-size: cover;
     background-position: center;
@@ -246,4 +218,53 @@ button {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+}
+
+
+/* media queryy */
+@media(max-width:1000px){
+    .flex{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    header ul{
+        position: fixed;
+        top:100px;
+        right: -100%;
+        background: rgba(0,0,0,0.5);
+        height: calc(100vh - 100px);
+        width:50%;
+        flex-direction: column;
+        align-items: center;
+        transition: right 0.5s linear;
+    }
+     
+    header .menu{
+        display: block;
+        width:100px;
+        text-align: center;
+    }
+    #chk1:checked ~ ul{
+        right: 0;
+        
+    }
+    .footer-section >.container> .flex{
+        display: flex;
+        justify-content:space-between;
+        gap: 20px;
+        margin: auto;
+    }
+
+  
+}
+@media(max-width:768px){
+    .footer-section >.container> .flex{
+        display: flex;
+       flex-direction: column;
+      
+    }
+    .flex{
+        display: flex;
+        flex-direction: column;
+    }
 }
