--- a/pages/style/index.css
+++ b/pages/style/index.css
@@ -1,33 +1,44 @@
+:root{
+    --color-primary-btn: #4717F6;
+    --color-primary-text:#ffffff; 
+    --color-secondary-text: #ffffffb9;
+    --color-primary-bg:#0E0B16;
+   
+    
+}
 *{
     margin: 0;
     padding: 0;
+   
+}
+body{
+    background: var(--color-primary-bg0) !important;;
 }
 
-h2::before{
-    position:absolute;
-    content:"\E901";
-    color: #f15a29;
-    left:-50px ;
-    overflow: hidden;
-    font-size: 1.8rem;
-    background: #f15a29;
-   transform: rotate(45deg);
+.hero {
+    width: 100%;
+    /* height: 100vh; */
+    background: url(../../assets/img/background.jpg) no-repeat center center;
+    background-size: cover;
+    background-position: center;
+    /* color: rgb(0, 0, 0); */
+    text-align: center;
+    /* padding: 100px 0; */
+    display: flex;
+    justify-content: space-between;
+    /* justify-content: right; */
 }
-
 
 /* section one */
-
-
 .feature {
-   
     border-radius:0 20px 0 20px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+   border: 1px solid ;
     max-width: 393px;
    margin: auto;
    transition: all ease-in 0.3s;
 }
 .feature:hover{
-    background: #fb5800b7;
+    color:var(--color-secondary-text);
 }
 
 .feature>img {
@@ -42,10 +53,7 @@ h2::before{
     text-align: center;
     padding: 9px;
 }
-/* section 3 */
-.flex-section {
-    background-color: #f0f0f0;
-}
+/* flex section */
 
 
 
@@ -53,15 +61,14 @@ h2::before{
     text-align: center;
     margin: 20px;
     max-width: 300px;
-    background: #e3b8b85a;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    /* background: #e3b8b85a; */
+    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
     padding: 9px;
   
     margin: auto;
 }
 
 .feature0 img {
-   
     width: 99%;
     height: 70%;
    
@@ -73,9 +80,7 @@ h2::before{
     padding: 20px;
     text-align: left;
 }
-.text-div>button{
-color: #ffffff;
-}
+
 
    .text-div>ul{
     list-style:url(../../assets/img/check-circle.svg);
@@ -97,12 +102,10 @@ color: #ffffff;
     justify-content: space-between;
     text-align: center;
     gap: 40px;
-    background: #b1b1b13e;
+ 
 }
 /* .content-section .swiper-wrapper,  */
-.content-section .card{
-    background: #dddddd3e;
-}
+
 
 
 .styled-counter >ul{
@@ -117,6 +120,7 @@ color: #ffffff;
     max-width: 600px;
     margin: auto;
     border: none;
+   
 }
 .img img{
 width: 100%;
@@ -130,7 +134,9 @@ margin: auto;
     padding: 10px;
     margin: auto;
     margin-top: 70px;
-    background: #ffffff;
+    background-color:var(--color-primary-bg);
+    border: 1px solid;
+   
 }
 .img p{
    
@@ -236,13 +242,14 @@ margin: auto;
 }
 
 /* package-section */
-.package-section{
-    background: #b1b1b13e;
-}
+
 .package-section .hed{
-    background: #ffdd02b4;
-    color: white;
-    padding: 5px;
+    /* background: #ffdd02b4;
+    color: white; */
+    padding: 10px;
+    background: var(--color-primary-bg);
+    border: 2px solid var(--colore-tertiary-bg);
+    border-radius: 9px 9px 0px 0px;
 }
 .package-section .hed h2{
    font-weight: 600;
@@ -257,15 +264,8 @@ margin: auto;
     box-shadow: none !important;
 }
 /* faqs-section */
-.faqs-section{
-   
-    background: #ffffff3e;
-}
 
-.faqs-section .accordion h2::before{
-    color:  #999999;
-    background: #999999;
-}
+
 
 
 /* packages swiper */
@@ -278,12 +278,14 @@ margin: auto;
 .package-section  .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    /* background: #fff; */
     display: flex;
     justify-content: center;
     align-items: center;
   };
-
+  sub{
+    color: whitesmoke;
+  }
  .package-section .swiper-slide img {
     display: block;
     width: 100%;
