--- a/pages/style/utils.css
+++ b/pages/style/utils.css
@@ -123,14 +123,23 @@ div.accordion> button{
 
 div.top{
     position: fixed;
-    width: 90px;
-    height: 90px;
-    /* background: #000; */
-    z-index: 9;
-    bottom: 90px;
-    left: 90%;
+    width: 50px;
+    height: 50px;
+    background: #ffffff;
+    z-index: 2;
+    bottom: 20px;
+    left: 94%;
     border-radius: 50%;
-    background:url('<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>') no-repeat center center;
+    /* background:url() no-repeat center center; */
+}
+div.top>img{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background: #ffffff;
+    z-index: 2;
+    border-radius: 50%;
+    /* background:url() no-repeat center center; */
 }
 li a.active{
     color: var(--color-primary-btn);
