--- a/pages/style/about.css
+++ b/pages/style/about.css
@@ -5,8 +5,23 @@
   vertical-align: middle;
   top: 360px;
 }
+.one img {
+  max-width: 300px;
+  margin: auto;
+}
 .swiper{
   max-width: 900px;
   max-height: 600px;
+  margin: auto;
 }
-
+@media (max-width:1000px) {
+  .one img {
+    max-width: 300px;
+    margin: auto;
+  }
+  .swiper{
+    max-width: 500px;
+    max-height: 600px;
+    margin: auto;
+  }
+}
