--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,16 @@ a {
     text-decoration: none;
     color: var(--color);
 }
+/* input */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+       -webkit-appearance: none;
+        margin: 0;
+}
 
+input[type=number] {
+    -moz-appearance: textfield;
+}
 .txt-rt {
     text-align: right;
 }
@@ -709,7 +718,9 @@ display: flex;
     padding: 0px;
     margin: 0px;
 }
-
+label {
+    font-size: xx-small;
+}
 .group:before,
 .group:after {
     content: "";
@@ -1048,7 +1059,19 @@ ul.address li {
         width: 95%;
     }
 }
-
+@media all and (max-width: 850px) {
+    .wrap {
+        width: 95%;
+    }
+    .images_1_of_2 h2{
+        font-size: medium;
+    }
+    .submit_button {
+        font-size: 0.5em;
+        padding: 10px 20px;
+        
+    }
+}
 @media all and (max-width:800px) {
     .wrap {
         width: 95%;
@@ -1063,11 +1086,13 @@ ul.address li {
         gap: 20px 0;
     }
 
-    .menu li a {
+    .menu li a,.menu li select {
         font-size: 0.75em;
         padding: 25px 10px;
     }
-
+/*  */
+ 
+/*  */
     .main {
         padding: 25px 0;
     }
@@ -1099,12 +1124,12 @@ ul.address li {
         width: 95%;
     }
 
-    .logo {
+    .logo , .logo>a>img {
         width: 40%;
         padding: 8px 0;
     }
 
-    .menu li a {
+    .menu li a,.menu li select {
         padding: 25px 5px;
     }
 
@@ -1148,18 +1173,21 @@ ul.address li {
         width: 95%;
     }
 
-    .logo {
+    .logo, .logo>a>img {
         float: none;
-        width: 100%;
+        width: 60%;
         text-align: center;
         padding: 0;
     }
-
+    .submit_button {
+        font-size: 1em;
+       
+    }
     .menu {
         float: none;
     }
 
-    .menu li a {
+    .menu li a,.menu li select {
         padding: 10px 18px;
     }
 
@@ -1199,6 +1227,9 @@ ul.address li {
     .contact_info {
         margin-top: 10px;
     }
+    .images_1_of_2 h2{
+        font-size:1.5em;
+    }
 }
 
 @media all and (max-width:320px) {
@@ -1206,7 +1237,7 @@ ul.address li {
         width: 95%;
     }
 
-    .menu li a {
+    .menu li a,.menu li select {
         font-size: 0.7em;
         padding: 6px 4.2px;
     }
