--- a/css/slider.css
+++ b/css/slider.css
@@ -87,7 +87,7 @@
 	width: 100% !important;
 }
 
-/* If an image is wrapped in a link */
+/* If  */
 .nivoSlider a.nivo-imageLink {
 	position:absolute;
 	top:0px;
