--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -180,8 +180,8 @@
         transition: all 300ms ease;
     }
     aside .sidebar a:last-child{
-        position: absolute;
-        bottom: 2rem;
+        /* position: absolute;
+        bottom: 2rem; */
         width: 100%;
     }
     
