--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     border-radius: 90px;
     border: 8px solid #4902ce;
   }; */
-
+  @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 :root{
     --color: #512DA8;
 }
@@ -248,13 +248,10 @@ img {
 }
 
 /*end reset*/
-@font-face {
-    font-family: 'ambleregular';
-    src: url(../fonts/Amble-Regular-webfont.ttf) format('truetype');
-}
+
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Nunito', sans-serif;
     background:
     url(../images/body_bg.png);
 }
@@ -273,7 +270,19 @@ body {
 }
 
 .header {
-    background: #323232;
+    /* background: #323232; */
+    margin-top: 100px;
+}
+div.poster>img{
+    width:100% ;
+    height: 100%;
+    /* object-fit: cover; */
+}
+div.poster>div.text{
+    position:absolute;
+    bottom: 30%;
+    left: 60px;
+    z-index: 90;
 }
 
 .logo {
@@ -294,7 +303,7 @@ width:100% ;
 
 .menu li a {
     display: block;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     font-size: 0.85em;
     color: #FFF;
     text-transform: uppercase;
@@ -308,7 +317,7 @@ width:100% ;
 }
 .menu li select{
     display: block;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     font-size: 0.85em;
     color: #FFF;
     background: #323232;
@@ -350,7 +359,7 @@ width:100% ;
     color: #FFF;
     font-size: 1.2em;
     text-transform: uppercase;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     padding: 8px 0;
     text-align: center;
     background: var(--color);
@@ -380,7 +389,7 @@ width:100% ;
     color: #FFF;
     font-size: 1.2em;
     text-transform: uppercase;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     padding: 8px 0;
     text-align: center;
     background: var(--color);
@@ -406,7 +415,7 @@ width:100% ;
 }
 
 .content_bottom h2 {
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     font-size: 1.5em;
     color: var(--color);
     padding: 5px 0;
@@ -415,7 +424,7 @@ width:100% ;
 }
 
 .content_bottom h3 {
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     font-size: 0.85em;
     color: var(--color);
     padding: 5px 0;
@@ -532,7 +541,7 @@ width:100% ;
     color: #FFF;
     font-size: 1.2em;
     text-transform: uppercase;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     padding: 8px 0;
     text-align: center;
     background: var(--color);
@@ -552,7 +561,7 @@ width:100% ;
 
 .latestnews_desc h4 {
     color: #555;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     font-size: 1em;
 }
 
@@ -564,7 +573,7 @@ width:100% ;
 }
 
 .latestnews_desc span a {
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     font-size: 0.8em;
     text-transform: uppercase;
     display: block;
@@ -583,7 +592,7 @@ width:100% ;
 }
 
 .view-all a {
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     color: var(--color);
     font-size: 0.85em;
     background: url(../images/arrow.png) no-repeat 0;
@@ -605,7 +614,7 @@ width:100% ;
     color: #FFF;
     font-size: 1.2em;
     text-transform: uppercase;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     padding: 8px 0;
     text-align: center;
     background: var(--color);
@@ -621,7 +630,7 @@ width:100% ;
     color: var(--color);
     font-size: 1.2em;
     text-transform: uppercase;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     padding-bottom: 15px;
 }
 
@@ -635,7 +644,7 @@ width:100% ;
     color: #6A6A6A;
     padding-bottom: 5px;
     text-transform: uppercase;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
 }
 
 .login_form input[type="text"],.login_form input[type="password"],.login_form input[type="number"],.login_form input[type="email"] {
@@ -650,7 +659,7 @@ width:100% ;
 
 
 .mybutton {
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     background: var(--color);
     padding: 8px 15px;
     color: #FFF;
@@ -685,7 +694,7 @@ width:100% ;
 .login_form h4 {
     font-size: 1em;
     color: #888;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     padding-top: 20px;
 }
 
@@ -748,7 +757,7 @@ label {
     font-size: 1.2em;
     color: var(--color);
     border-bottom: 1px dotted #D5D5D5;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     text-transform: uppercase;
     margin-bottom: 10px;
 }
@@ -762,7 +771,7 @@ label {
 
 .span_1_of_4 p span a {
     color: var(--color);
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
 }
 
 .span_1_of_4 p span a:hover {
@@ -792,7 +801,7 @@ ul.address li a {
 .Testimonials_desc h5 {
     font-size: 0.85em;
     color: var(--color);
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     text-align: right;
     font-style: italic;
 }
@@ -806,7 +815,7 @@ ul.address li a {
 .copy-right p {
     font-size: 0.85em;
     color: #FFF;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
 }
 
 .copy-right p a {
@@ -823,7 +832,7 @@ ul.address li a {
     color: #FFF;
     text-decoration: none;
 }
-/* *********** new about****************/
+/* ***********  new about   ****************/
 .heading_sm{
     width:calc( 100% - 60%) !important;
 }
@@ -882,7 +891,7 @@ ul.address li a {
     font-size: 1.4em;
     margin: 5px 0;
     text-transform: uppercase;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
 }
 
 .list_2_of_1 p {
@@ -946,7 +955,7 @@ ul.address li a {
 
 .blog-desc h4 a {
     color: #555;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     font-size: 1.2em;
     text-transform: uppercase;
 }
@@ -970,7 +979,7 @@ ul.address li a {
 .contact-form span {
     display: block;
     color: #949494;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     padding-bottom: 5px;
     font-size: 0.85em;
     text-transform: uppercase;
@@ -1022,7 +1031,7 @@ ul.address li a {
     -moz-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
-    font-family: 'ambleregular';
+    /* font-family: 'ambleregular'; */
     position: absolute;
     right: 0;
 }
